syntax = "proto3";

package pbcommon;

option go_package = "github.com/wwengg/im/proto/pbcommon";

enum EnumCode {
  None = 0;
  Success = 200; // 操作成功
  Fail = 500; // 操作失败
  Unknown = 501; // 未知错误
  Internal = 502; // 内部错误
  Invalid = 503; // 无效数据
  InvalidParam = 504; // 无效参数
  ParamError = 505; // 参数错误

  FindError = 1001; // 查询失败
  CreateError = 1002; // 创建失败
  DeleteError = 1003; // 删除失败
  UpdateError = 1004; // 更新失败
}

message CommonResult{
  EnumCode code = 1;
  string msg = 2;
}

message IdArgs {
  int64 id = 1;
  string idStr = 2;
  repeated int64 ids = 3;
  repeated string idStrs = 4;
}

message PageInfo{
  int32 page = 1;
  int32 pageSize = 2;
}

message commonList {
  PageInfo pageInfo = 1;
}